syntax = "proto3";

package user;

service UserService {
  rpc CreateUser(UserRequest) returns (UserResponse);
  rpc FindById(UserId) returns (UserResponse);
}
message UserId {
  int32 randomId =1;
}

message UserRequest {
  int32 randomId = 1;
  int32 adCnt = 2;
  int32 cdCnt = 3;
  bool preRev = 4;
  string regDt = 5;
}

message UserResponse {
  int32 randomId = 1;
  int32 adCnt = 2;
  int32 cdCnt = 3;
  bool preRev = 4;
  string regDt = 5;
}
